--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Jrnlr - A modern journaling experience.</title>
+  <title>Jrnlr - Your online journal.</title>
 </head>
 
 <body>
